Fix form text too light

--- a/src/components/InputForm/InputForm.scss
+++ b/src/components/InputForm/InputForm.scss
@@ -9,7 +9,7 @@
 .form-text-input {
   @include form-style();
   height: 2.5rem;
-  color: $light-gray;
+  // color: $light-gray;
 }
 
 .form-select-input {
